--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,17 @@ body {
     color: #000;
 }
 
+body.light-mode {
+    background-color: #f5f5f5;
+    color: #000;
+}
+
+body.light-mode .search-button,
+body.light-mode .engine-button {
+    background-color: #000;
+    color: #fff;
+}
+
 body.dark-mode {
     background-color: #333;
     color: #fff;
@@ -54,7 +65,10 @@ body.material-design .engine-button {
     border-radius: 28px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 10px;
-    width: 350px;
+    width: 300px;
+    position: relative;
+    left: 0px;
+    top: 0px;
 }
 
 .search-box {
@@ -179,6 +193,13 @@ body.dark-mode .popup-header {
 .menu-section h3 {
     margin: 0 0 10px 0;
     font-size: 16px;
+}
+
+.popup p {
+    margin: 0;
+    font-size: 14px;
+    text-align: center;
+    color: inherit;
 }
 
 .popup button {
