--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ body.material-design .engine-button {
 .search-container {
     display: flex;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.7); /* 半透明背景 */
+    background-color: rgba(255, 255, 255, 1.0); /* 默认无透明 */
     border-radius: 28px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 10px;
