--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ body.material-design .engine-button {
     font-size: 16px;
     flex-grow: 1;
     margin-right: 10px;
-    background-color: inherit;
+    background-color: rgba(255, 255, 255, 1.0); /* 确保与父容器背景一致 */
     color: inherit;
 }
 
