--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,7 @@ body.material-design .engine-button {
     left: 0px;
     top: 0px;
     backdrop-filter: none; /* 默认无模糊效果 */
+    transition: background-color 0.5s ease, backdrop-filter 0.5s ease;
 }
 
 .search-box {
